# app/service/user/sign/api/grpc/sign.pb.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-gogo. DO NOT EDIT.
-// source: app/user/sign/api/grpc/sign.proto
+// source: app/service/user/sign/api/grpc/sign.proto
 
 package grpc
 
@@ -40,7 +40,7 @@ func (m *Info) Reset()         { *m = Info{} }
 func (m *Info) String() string { return proto.CompactTextString(m) }
 func (*Info) ProtoMessage()    {}
 func (*Info) Descriptor() ([]byte, []int) {
-	return fileDescriptor_d3e46b5a18f2e404, []int{0}
+	return fileDescriptor_7b5937e63490ef61, []int{0}
 }
 func (m *Info) XXX_Unmarshal(b []byte) error {
 	return m.Unmarshal(b)
@@ -101,7 +101,7 @@ func (m *InfoReq) Reset()         { *m = InfoReq{} }
 func (m *InfoReq) String() string { return proto.CompactTextString(m) }
 func (*InfoReq) ProtoMessage()    {}
 func (*InfoReq) Descriptor() ([]byte, []int) {
-	return fileDescriptor_d3e46b5a18f2e404, []int{1}
+	return fileDescriptor_7b5937e63490ef61, []int{1}
 }
 func (m *InfoReq) XXX_Unmarshal(b []byte) error {
 	return m.Unmarshal(b)
@@ -148,7 +148,7 @@ func (m *InfoResp) Reset()         { *m = InfoResp{} }
 func (m *InfoResp) String() string { return proto.CompactTextString(m) }
 func (*InfoResp) ProtoMessage()    {}
 func (*InfoResp) Descriptor() ([]byte, []int) {
-	return fileDescriptor_d3e46b5a18f2e404, []int{2}
+	return fileDescriptor_7b5937e63490ef61, []int{2}
 }
 func (m *InfoResp) XXX_Unmarshal(b []byte) error {
 	return m.Unmarshal(b)
@@ -195,7 +195,7 @@ func (m *SignReq) Reset()         { *m = SignReq{} }
 func (m *SignReq) String() string { return proto.CompactTextString(m) }
 func (*SignReq) ProtoMessage()    {}
 func (*SignReq) Descriptor() ([]byte, []int) {
-	return fileDescriptor_d3e46b5a18f2e404, []int{3}
+	return fileDescriptor_7b5937e63490ef61, []int{3}
 }
 func (m *SignReq) XXX_Unmarshal(b []byte) error {
 	return m.Unmarshal(b)
@@ -232,6 +232,7 @@ func (m *SignReq) GetUid() int64 {
 }
 
 type SignResp struct {
+	AlreadySigned        bool     `protobuf:"varint,1,opt,name=already_signed,json=alreadySigned,proto3" json:"already_signed,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -241,7 +242,7 @@ func (m *SignResp) Reset()         { *m = SignResp{} }
 func (m *SignResp) String() string { return proto.CompactTextString(m) }
 func (*SignResp) ProtoMessage()    {}
 func (*SignResp) Descriptor() ([]byte, []int) {
-	return fileDescriptor_d3e46b5a18f2e404, []int{4}
+	return fileDescriptor_7b5937e63490ef61, []int{4}
 }
 func (m *SignResp) XXX_Unmarshal(b []byte) error {
 	return m.Unmarshal(b)
@@ -270,6 +271,13 @@ func (m *SignResp) XXX_DiscardUnknown() {
 
 var xxx_messageInfo_SignResp proto.InternalMessageInfo
 
+func (m *SignResp) GetAlreadySigned() bool {
+	if m != nil {
+		return m.AlreadySigned
+	}
+	return false
+}
+
 func init() {
 	proto.RegisterType((*Info)(nil), "ncs.user.sign.Info")
 	proto.RegisterType((*InfoReq)(nil), "ncs.user.sign.InfoReq")
@@ -278,29 +286,33 @@ func init() {
 	proto.RegisterType((*SignResp)(nil), "ncs.user.sign.SignResp")
 }
 
-func init() { proto.RegisterFile("app/user/sign/api/grpc/sign.proto", fileDescriptor_d3e46b5a18f2e404) }
+func init() {
+	proto.RegisterFile("app/service/user/sign/api/grpc/sign.proto", fileDescriptor_7b5937e63490ef61)
+}
 
-var fileDescriptor_d3e46b5a18f2e404 = []byte{
-	// 303 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0x52, 0x4c, 0x2c, 0x28, 0xd0,
-	0x2f, 0x2d, 0x4e, 0x2d, 0xd2, 0x2f, 0xce, 0x4c, 0xcf, 0xd3, 0x4f, 0x2c, 0xc8, 0xd4, 0x4f, 0x2f,
-	0x2a, 0x48, 0x06, 0xf3, 0xf4, 0x0a, 0x8a, 0xf2, 0x4b, 0xf2, 0x85, 0x78, 0xf3, 0x92, 0x8b, 0xf5,
-	0x40, 0x4a, 0xf4, 0x40, 0x82, 0x52, 0x32, 0xe9, 0xf9, 0xf9, 0xe9, 0x39, 0xa9, 0x60, 0xa5, 0x89,
-	0x79, 0x79, 0xf9, 0x25, 0x89, 0x25, 0x99, 0xf9, 0x79, 0xc5, 0x10, 0xc5, 0x4a, 0x41, 0x5c, 0x2c,
-	0x9e, 0x79, 0x69, 0xf9, 0x42, 0x02, 0x5c, 0xcc, 0xa5, 0x99, 0x29, 0x12, 0x8c, 0x0a, 0x8c, 0x1a,
-	0xcc, 0x41, 0x20, 0xa6, 0x90, 0x34, 0x17, 0x27, 0x48, 0x7f, 0x7c, 0x49, 0x66, 0x6e, 0xaa, 0x04,
-	0x13, 0x58, 0x9c, 0x03, 0x24, 0x10, 0x92, 0x99, 0x9b, 0x0a, 0x97, 0x4c, 0x49, 0xac, 0x2c, 0x96,
-	0x60, 0x56, 0x60, 0xd4, 0x60, 0x85, 0x48, 0xba, 0x24, 0x56, 0x16, 0x2b, 0x49, 0x73, 0xb1, 0x83,
-	0xcc, 0x0c, 0x4a, 0x2d, 0xc4, 0x34, 0x56, 0xc9, 0x98, 0x8b, 0x03, 0x22, 0x59, 0x5c, 0x20, 0xa4,
-	0xce, 0xc5, 0x92, 0x99, 0x97, 0x96, 0x0f, 0x96, 0xe6, 0x36, 0x12, 0xd6, 0x43, 0x71, 0xb8, 0x1e,
-	0x58, 0x19, 0x58, 0x01, 0xc8, 0xc4, 0xe0, 0xcc, 0xf4, 0x3c, 0xec, 0x26, 0x72, 0x71, 0x71, 0x40,
-	0x24, 0x8b, 0x0b, 0x8c, 0x56, 0x32, 0x72, 0xb1, 0x80, 0x38, 0x42, 0x81, 0x50, 0x7f, 0x89, 0x61,
-	0x33, 0x34, 0xb5, 0x50, 0x4a, 0x1c, 0xab, 0x78, 0x71, 0x81, 0x92, 0x44, 0xd3, 0xe5, 0x27, 0x93,
-	0x99, 0x84, 0x84, 0x04, 0x90, 0x42, 0xb9, 0xba, 0x34, 0x33, 0xa5, 0x56, 0xc8, 0x0f, 0x6a, 0x34,
-	0xba, 0x91, 0x50, 0x97, 0x61, 0x18, 0x09, 0x73, 0x94, 0x92, 0x28, 0xd8, 0x48, 0x7e, 0x25, 0x2e,
-	0x84, 0x91, 0x56, 0x8c, 0x5a, 0x4e, 0x62, 0x27, 0x1e, 0xc9, 0x31, 0x5e, 0x78, 0x24, 0xc7, 0xf8,
-	0xe0, 0x91, 0x1c, 0xe3, 0x8c, 0xc7, 0x72, 0x0c, 0x51, 0x2c, 0xa0, 0xa8, 0x4c, 0x62, 0x03, 0xc7,
-	0x8c, 0x31, 0x20, 0x00, 0x00, 0xff, 0xff, 0xe6, 0x13, 0x3b, 0xa6, 0xeb, 0x01, 0x00, 0x00,
+var fileDescriptor_7b5937e63490ef61 = []byte{
+	// 334 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x6c, 0x91, 0x4f, 0x4b, 0xc3, 0x30,
+	0x18, 0xc6, 0xcd, 0x56, 0xb5, 0x46, 0xa6, 0x23, 0xe2, 0x2c, 0x9b, 0x94, 0x11, 0x10, 0xa7, 0x87,
+	0x16, 0xb7, 0x9b, 0x47, 0xf1, 0xe2, 0x45, 0xb0, 0xf3, 0xe4, 0x65, 0xc4, 0x35, 0x2b, 0x81, 0x2d,
+	0xc9, 0x9a, 0x56, 0x28, 0xe2, 0xc5, 0xaf, 0xe0, 0xc5, 0xaf, 0xe0, 0x37, 0xf1, 0x28, 0xf8, 0x05,
+	0xa4, 0xfa, 0x41, 0x24, 0x69, 0xfd, 0xbb, 0xde, 0xde, 0x3e, 0xcf, 0xd3, 0x5f, 0xde, 0x97, 0x07,
+	0x1e, 0x10, 0x29, 0x7d, 0x45, 0xe3, 0x1b, 0x36, 0xa6, 0x7e, 0xaa, 0x68, 0xec, 0x2b, 0x16, 0x71,
+	0x9f, 0x48, 0xe6, 0x47, 0xb1, 0x1c, 0x9b, 0x2f, 0x4f, 0xc6, 0x22, 0x11, 0xa8, 0xc1, 0xc7, 0xca,
+	0xd3, 0x11, 0x4f, 0x8b, 0xed, 0xdd, 0x48, 0x88, 0x68, 0x4a, 0x4d, 0x94, 0x70, 0x2e, 0x12, 0x92,
+	0x30, 0xc1, 0x55, 0x11, 0xc6, 0x01, 0xb4, 0xce, 0xf8, 0x44, 0xa0, 0x26, 0xac, 0xa7, 0x2c, 0x74,
+	0x40, 0x17, 0xf4, 0xea, 0x81, 0x1e, 0x51, 0x07, 0xae, 0xe9, 0xff, 0x47, 0x09, 0x9b, 0x51, 0xa7,
+	0x66, 0x74, 0x5b, 0x0b, 0x97, 0x6c, 0x46, 0xbf, 0xcd, 0x90, 0x64, 0xca, 0xa9, 0x77, 0x41, 0x6f,
+	0xb9, 0x30, 0x4f, 0x49, 0xa6, 0x70, 0x07, 0xae, 0x6a, 0x66, 0x40, 0xe7, 0x8b, 0x58, 0x3c, 0x80,
+	0x76, 0x61, 0x2a, 0x89, 0xf6, 0xa1, 0xc5, 0xf8, 0x44, 0x18, 0x7b, 0xbd, 0xbf, 0xe5, 0xfd, 0x59,
+	0xdc, 0x33, 0x31, 0x13, 0xd0, 0xc4, 0x21, 0x8b, 0x78, 0x35, 0xf1, 0x08, 0xda, 0x85, 0xa9, 0x24,
+	0xda, 0x83, 0x1b, 0x64, 0x1a, 0x53, 0x12, 0x66, 0x23, 0xcd, 0xa0, 0x45, 0xd0, 0x0e, 0x1a, 0xa5,
+	0x3a, 0x34, 0x62, 0xff, 0x09, 0x40, 0x4b, 0x8f, 0xe8, 0xa2, 0x3c, 0xbf, 0x55, 0xf5, 0x36, 0x9d,
+	0xb7, 0x77, 0x2a, 0x75, 0x25, 0xb1, 0x73, 0xff, 0xfa, 0xf1, 0x50, 0x43, 0xa8, 0xf9, 0xab, 0x8c,
+	0xdb, 0x94, 0x85, 0x77, 0xe8, 0xbc, 0x44, 0xff, 0x47, 0x96, 0x07, 0x2c, 0x20, 0xbf, 0x76, 0xc7,
+	0xdb, 0x06, 0xb9, 0x89, 0xe1, 0x0f, 0xf2, 0x18, 0x1c, 0x9e, 0xb4, 0x9e, 0x73, 0x17, 0xbc, 0xe4,
+	0x2e, 0x78, 0xcb, 0x5d, 0xf0, 0xf8, 0xee, 0x2e, 0x5d, 0x59, 0xba, 0xf1, 0xeb, 0x15, 0x53, 0xe0,
+	0xe0, 0x33, 0x00, 0x00, 0xff, 0xff, 0x58, 0xe8, 0x53, 0x60, 0x1a, 0x02, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -416,7 +428,7 @@ var _Sign_serviceDesc = grpc.ServiceDesc{
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
-	Metadata: "app/user/sign/api/grpc/sign.proto",
+	Metadata: "app/service/user/sign/api/grpc/sign.proto",
 }
 
 func (m *Info) Marshal() (dAtA []byte, err error) {
@@ -588,6 +600,16 @@ func (m *SignResp) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 		i -= len(m.XXX_unrecognized)
 		copy(dAtA[i:], m.XXX_unrecognized)
 	}
+	if m.AlreadySigned {
+		i--
+		if m.AlreadySigned {
+			dAtA[i] = 1
+		} else {
+			dAtA[i] = 0
+		}
+		i--
+		dAtA[i] = 0x8
+	}
 	return len(dAtA) - i, nil
 }
 
@@ -675,6 +697,9 @@ func (m *SignResp) Size() (n int) {
 	}
 	var l int
 	_ = l
+	if m.AlreadySigned {
+		n += 2
+	}
 	if m.XXX_unrecognized != nil {
 		n += len(m.XXX_unrecognized)
 	}
@@ -1063,6 +1088,26 @@ func (m *SignResp) Unmarshal(dAtA []byte) error {
 			return fmt.Errorf("proto: SignResp: illegal tag %d (wire type %d)", fieldNum, wire)
 		}
 		switch fieldNum {
+		case 1:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field AlreadySigned", wireType)
+			}
+			var v int
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowSign
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				v |= int(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+			m.AlreadySigned = bool(v != 0)
 		default:
 			iNdEx = preIndex
 			skippy, err := skipSign(dAtA[iNdEx:])
